tests/ui/failing/drop.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/dyn-star/drop.rs`
error[E0277]: `Foo` needs to have the same ABI as a pointer
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/dyn-star/drop.rs:18:30
   |
18 |     let _dyn_i: dyn* Debug = i;
   |                              ^ `Foo` needs to be a pointer-like type
   |
   = help: the trait `std::marker::PointerLike` is not implemented for `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
